# SafeTrail

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt  test_agent.py  test_db.py
backend/app/: auth.py  database.py  main.py  models.py
backend/app/agents/: graph.py  nodes.py  state.py  tools.py
backend/app/routers/: auth.py  itinerary.py
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: Footer.jsx  Navbar.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: HistoryPage.jsx  LoginPage.jsx  SignupPage.jsx
